[gd_scene load_steps=45 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://0208040701_4012.png" type="Texture" id=2]
[ext_resource path="res://New Piskel-1.png (10).png" type="Texture" id=3]
[ext_resource path="res://0208040701_4012(1).png" type="Texture" id=4]
[ext_resource path="res://LifeBarMiniProgress.png" type="Texture" id=5]
[ext_resource path="res://LifeBarMiniUnder.png" type="Texture" id=6]
[ext_resource path="res://0208040701_4012(1)-1.png.png" type="Texture" id=7]
[ext_resource path="res://ThaleahFat.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/NewPiskel-1png(10):visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/NewPiskel-1png(10):rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "blink"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "slash droite"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/NewPiskel-1png(10):visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/NewPiskel-1png(10):rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.11, 0.17 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -15.2, 51.2, 52.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13, 1 ), Vector2( 13, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "slash gauche"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/NewPiskel-1png(10):rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.17 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 286.8, 209.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/NewPiskel-1png(10):visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.5248
height = 5.93687

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 39, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 13, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 39, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 26, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 13, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 39, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 26, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 13, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 13, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 26, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 39, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 13, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 26, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 39, 16, 13, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 13, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 26, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 39, 32, 13, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "dye droite",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "dye gauche",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 7, 8 )

[sub_resource type="DynamicFont" id=37]
outline_color = Color( 1, 0.894118, 0.0313726, 0 )
font_data = ExtResource( 8 )

[node name="player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 20, 18 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/blink = SubResource( 11 )
"anims/slash droite" = SubResource( 7 )
"anims/slash gauche" = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="." groups=["sword"]]

[node name="NewPiskel-1png(10)" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 0, 5 )
rotation = -0.26529
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -15, 1 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
frames = SubResource( 4 )
animation = "dye droite"
flip_h = true

[node name="coeur" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coeur"]
position = Vector2( -1, 0 )
shape = SubResource( 12 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -14.0
margin_right = 9.0
margin_bottom = -10.0
max_value = 50.0
step = 0.5
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )

[node name="vie" type="Label" parent="."]
margin_left = -6.0
margin_top = -24.0
margin_right = 10.0
margin_bottom = -9.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 37 )
text = "50"
align = 1
valign = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="coeur" to="." method="_on_coeur_area_entered"]
